--- a/liv/components/lines.html
+++ b/liv/components/lines.html
@@ -1,3 +1,7 @@
+<div class="container">
+	in an ultra secure and untraceable manner
+</div>
+
 <div style="position: relative; height: 60vh;"></div>
 <div id="lineSection">
     <div class="device bgD" id="basedevice" style="display: none;">
@@ -53,7 +57,29 @@
     <img id="brain" class="brain brainPiccolo" src="../media/img/icons/brain.svg">
 </div>
 
+<div class="container">
+    where all your data is combined in one centralized neural network
+</div>
+
+<div style="height: 200vh; width: 100vh; position: relative; background-color: black;">
+
+</div>
+
+
 <script>
+
+const containers = gsap.utils.toArray(".container");
+containers.forEach((container) => {
+  gsap.to(container, {
+    autoAlpha: 1,
+    ease: "power1.in",
+    scrollTrigger: {
+      trigger: container,
+      pin: true,
+      scrub: true
+    }
+  });
+});
 
 const basedevice = document.getElementById("basedevice");
 const devices = document.getElementById("devices");
