--- a/liv/script/style.css
+++ b/liv/script/style.css
@@ -287,11 +287,13 @@ a:hover {
     scroll-snap-stop: always;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    align-items: center;
+    justify-content: center;
     position: relative;
     height: 100vh;
     width: 100%;
     text-align: center;
+    visibility: hidden;
 }
 .step>div {
     display: flex;
@@ -299,16 +301,25 @@ a:hover {
     flex-direction: column;
     align-items: center;
 
-    justify-content: flex-end;
-    padding-bottom: 5vh;
-    font-size: 50px;
-    /* justify-content: center;
-    font-size: 40px; */
+    justify-content: center;
+    font-size: 40px;
     font-weight: 700;
     height: 100vh;
     width: 100%;
     color: #ffffff;
-    opacity: 1;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+    font-weight: 700;
+    position: absolute;
+    visibility: hidden;
+    z-index: 2;
+    width: 100%;
+    height: 100vh;
 }
 
 #description{
@@ -531,7 +542,7 @@ a:hover {
 }
 
 .hider{
-    height: 50vh; 
+    height: 55vh; 
     display:none; 
     z-index:1; 
     position: fixed; 
