--- a/liv/components/lines.html
+++ b/liv/components/lines.html
@@ -61,7 +61,7 @@
     where all your data is combined in one centralized neural network
 </div>
 
-<div style="height: 200vh; width: 100vh; position: relative; background-color: black;">
+<div style="height: 200vh; width: 100vw; position: relative; background-color: black;">
 
 </div>
 
