--- a/liv/script/style.css
+++ b/liv/script/style.css
@@ -313,6 +313,7 @@ a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     font-size: 40px;
     font-weight: 700;
     position: absolute;
