--- a/liv/script/style.css
+++ b/liv/script/style.css
@@ -293,7 +293,7 @@ a:hover {
     height: 100vh;
     width: 100%;
     text-align: center;
-    visibility: hidden;
+    /* visibility: hidden; */
 }
 .step>div {
     display: flex;
@@ -317,7 +317,7 @@ a:hover {
     font-size: 40px;
     font-weight: 700;
     position: absolute;
-    visibility: hidden;
+    /* visibility: hidden; */
     z-index: 2;
     width: 100%;
     height: 100vh;
