--- a/liv/components/scanning.html
+++ b/liv/components/scanning.html
@@ -1,4 +1,4 @@
-<div style="background-color: black; width: 100vw; height: 100vh; position: absolute; display: block; z-index: 1;">
+<div style="background-color: black; width: 100vw; height: 100vh; position: relative; display: block; z-index: 1;">
 
     <div class="scrolling-video-container">
 
