--- a/liv/components/footer.html
+++ b/liv/components/footer.html
@@ -1,7 +1,7 @@
 <div class="footer">
     <div class="foot on">
         <ul>
-            <li style="padding-top: 0; padding-bottom: 0;"> 
+            <li class="footNo" style="padding-top: 0; padding-bottom: 0;"> 
             <a href="../">
                 <img src="../media/img/svg/liv-red.svg" alt="">
             </a>
