--- a/liv/components/home/landing.html
+++ b/liv/components/home/landing.html
@@ -1,5 +1,5 @@
 <div class="video-container">
-    <div style="position: absolute; z-index: 5;"><div class="videotext"><h1 id="textVid"></h1></div></div>
+    <div style="position: absolute; z-index: 5;"><div class="videotext"><h1 id="textVid">About Us</h1></div></div>
     <video style="z-index: 1;" src="../media/video/Header.mp4" id="intro" type="video/mp4" autoplay muted="muted" playsinline="" controlslist="nodownload"></video>
     <!-- <div style="position: absolute; bottom: 5vh; right: 2vw; z-index: 10; display: flex;"><input class="normal-btn btn" readonly="readonly" type="submit" value="Watch Video" onClick="playAudio();"></div> -->
 </div>
