--- a/liv/script/style.css
+++ b/liv/script/style.css
@@ -221,7 +221,7 @@ a{
     padding:5vh;
 }
 .black h1{
-    font-size: 6vw;
+    font-size: 4vw;
     font-weight: bold;
     padding-top: 10vh;
 }
@@ -258,6 +258,7 @@ a{
     font-size:3vw;
     font-weight: bold;
 }
+
 .imaginehalf p {
     padding: 5vh;
     font-size: 6vw;
@@ -763,6 +764,47 @@ a{
 }
 
 /* ---------- ABOUT ME ---------- */
+.founder{
+    z-index: 1;
+    /* height: 100vh; */
+    position: relative;
+    width: 100vw;
+    background-color: #000000;
+
+    display: flex;
+    align-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.founder p {
+    padding: 5vh;
+    font-size:3vw;
+    font-weight: bold;
+}
+
+.founder h3 {
+    font-size:1em;
+}
+.founder h4 {
+    font-size:0.7em;
+}
+
+.founder div {
+    position: relative;
+    align-content: center;
+    vertical-align: middle;
+    font-size: 2em !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    width: 30vw;
+
+    text-align: center;
+    padding: 5vh;
+}
 
 .imgfull{
     position: absolute;
@@ -772,46 +814,72 @@ a{
     text-align: center;
 }
 
-.aboutme{
+.whoami{ width: 70vw; }
+
+.auto-grid {
+    
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size), 1fr));
+    grid-gap: 50px;
+
+    justify-items: center;
+
+    align-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.auto-grid li{
+    padding: 30px 0vw;
+    text-align: center;
+    /* background: #eb4d4b; */
+    color: #ffffff;
+
     position: relative;
     align-content: center;
     vertical-align: middle;
-    font-size: 2.5em !important;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-.whoami{ width: 70vw; }
-.whoprofile{ width: 30vw; }
+.team{
+    --auto-grid-min-size: 200px;
+}
 
-.aboutme p{
-    font-size: 0.45em;
+.team li{
+    width: 250px;
+    padding-top: 10vh;
+}
+
+.team li img{
+    padding-bottom: 4vh;
+    width: 150px;
+}
+
+.team li p{
+    font-size: 1em;
     text-align: center;
     padding: 0;
 }
 
+.contributors{
+    --auto-grid-min-size: 300px;
+}
+
+.contributors li{
+    width: 400px;
+}
+
+.contributors li img{
+    padding-bottom: 4vh; 
+    width: 250px;
+}
+
 .subtitle{
-    font-size: 0.3em !important;
+    font-size: 0.75em !important;
     color: #a5a5a5;
-}
-
-.centerme{
-    display: flex;
-    align-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-
-.guy{
-    width: 25vw;
-    padding-top: 10vh;
-}
-
-.guy img{
-    padding-bottom: 4vh;
-    width: 11vw;
 }
 
 /* ---------- FORM ---------- */
