--- a/liv/components/about/contributors.html
+++ b/liv/components/about/contributors.html
@@ -3,7 +3,7 @@
         Advisors
     </h2>
 </div>
-<ul class="auto-grid contributors">
+<ul class="auto-grid contributors" style="padding-bottom: 10vh;">
     <li>
       <img src="../media/img/about/team/Lars.png">
       <p>Lars Christensen</p>
