--- a/liv/components/about/founders.html
+++ b/liv/components/about/founders.html
@@ -4,8 +4,7 @@
     </h2>
 </div>
 
-<section class="founder">
-    <img class="imgfull" src="../media/img/bg/field.webp">
+<section class="founder daniel">
   
     <div>
         <img src="../media/img/about/Daniel.png" style="padding-bottom: 4vh; width: 18vw;">
@@ -16,8 +15,8 @@
     <p class="whoami">"In Liv, we are on a mission to democratize healthcare. We believe healthcare should be a human right. We want to make health easy, accessible and affordable for all. "</p>
 </section>
   
-<section class="founder">
-    <img class="imgfull" src="../media/img/bg/fly.webp">
+<section class="founder sachin">
+    <!-- <img class="imgfull" src="../media/img/bg/fly.webp"> -->
 
     <p class="aboutme whoami">"We make health easy and accessible for all. we enable anyone"</p>
 
@@ -28,8 +27,7 @@
     </div>
 </section>
 
-<section class="founder">
-    <img class="imgfull" src="../media/img/bg/bike.webp">
+<section class="founder max">
 
     <div>
         <img src="../media/img/about/Max.png" style="padding-bottom: 4vh; width: 18vw;">
