--- a/liv/components/home/closing.html
+++ b/liv/components/home/closing.html
@@ -1,17 +1,28 @@
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
 <div class="imagine">
-    <p>
+    <p style="width: 70vw;">
         That gives birth to an omni-present A.I.
         that helps you navigate through your life
         by enabling you to understand how your lifestyle affects your health
         which habits your body and nervous system is coping with
         and which need to change – and how…
     </p>
+
+    <div style="width: 30vw;">
+        <lottie-player src="https://lottie.host/2d43b5df-391b-41c0-b87b-c9ceb80431c3/SomFLu2iHC.json"  background="transparent"  speed="1"  style="width: 25vw; height: 25vw"  loop  autoplay></lottie-player>
+    </div>
 </div>
+
 <div class="imagine">
-    <p>
+    <div style="width: 30vw;">
+        <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_kvw2mn6a.json"  background="transparent"  speed="0.5"  style="width: 25vw; height: 25vw"  loop  autoplay></lottie-player>
+    </div>
+    
+    <p style="width: 70vw;">
         used proactively for your personalized preventive health
         empowering you to make qualified informed decisions about your health every day
         
-        and actionable insights        
+        and actionable insights    
     </p>
 </div>
