--- a/liv/components/home/newscroll.html
+++ b/liv/components/home/newscroll.html
@@ -43,10 +43,10 @@
     <section id="step9" class="step">
         <div><h3></h3></div>
     </section>
-
+<!-- 
     <section id="step10" class="step">
         <div><h3></h3></div>
-    </section>
+    </section> -->
 
 </div>
 
