--- a/liv/components/home/scanning.html
+++ b/liv/components/home/scanning.html
@@ -8,16 +8,16 @@
             </div>
     
             <div class="scrollVideoText scrollHead">
-                <h1 id="scrollHead">Analyzing the <span style="color: #ED1E40; font-size: 60px;">head</span></h1>
+                <h1 id="scrollHead">Analyzing the <span style="color: #ED1E40; font-size: 40px;">Electroencephalogram, eye-tracking, saliva, skin tone</span></h1>
             </div>
             <div class="scrollVideoText scrollChest">
-                <h1 id="scrollChest">Analyzing the <span style="color: #ED1E40; font-size: 60px;">chest</span></h1>
+                <h1 id="scrollChest">Analyzing the <span style="color: #ED1E40; font-size: 40px;">ECG</span></h1>
             </div>
             <div class="scrollVideoText scrollArms">
-                <h1 id="scrollArms">Analyzing the <span style="color: #ED1E40; font-size: 60px;">arms</span></h1>
+                <h1 id="scrollArms">Analyzing the <span style="color: #ED1E40; font-size: 40px;">blood pressure, spo2, GSR, muscle tension</span></h1>
             </div>
             <div class="scrollVideoText scrollBust">
-                <h1 id="scrollBust">Analyzing the <span style="color: #ED1E40; font-size: 60px;">stomach</span></h1>
+                <h1 id="scrollBust">Analyzing the <span style="color: #ED1E40; font-size: 40px;"> EGG, gut health</span></h1>
             </div>
         </div>
     
