--- a/liv/components/footer.html
+++ b/liv/components/footer.html
@@ -3,7 +3,7 @@
         <ul>
             <li class="footNo" style="padding-top: 0; padding-bottom: 0;"> 
             <a href="../">
-                <img src="../media/img/svg/liv-red.svg" alt="">
+                <img src="../media/img/svg/liv-red.svg" alt="Liv logo">
             </a>
             </li>
             <li><a href="../about/index.html">About</a></li>
@@ -23,21 +23,21 @@
             <li><a href="../privacy/">Privacy Policy</a></li>
         </ul>
     </div>
-    <div class="foot on" style="padding-left: 10vw;">
+    <div class="foot on social" style="padding-left: 10vw;">
         <ul>
             <li>
                 <a href="https://www.instagram.com/" target="_blank">
-                    <img src="../media/img/svg/ig.svg" alt="">
+                    <img src="../media/img/svg/ig.svg" alt="Instagram Account">
                 </a>
             </li>
             <li>
                 <a href="https://www.facebook.com/" target="_blank">
-                    <img src="../media/img/svg/fb.svg" alt="">
+                    <img src="../media/img/svg/fb.svg" alt="Facebook Account">
                 </a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/company/livpatch/" target="_blank">
-                    <img src="../media/img/svg/in.svg" alt="">
+                    <img src="../media/img/svg/in.svg" alt="Linkedin Account">
                 </a>
             </li>
         </ul>
