--- a/liv/components/home/lines.html
+++ b/liv/components/home/lines.html
@@ -13,12 +13,12 @@
         <img id="rotateme6" src="../media/img/icons/Base.svg">
     </div>
     <div class="device bgD" id="devices" style="display: none;">
-        <img src="../media/img/icons/Phone.svg">
-        <img src="../media/img/icons/Ear.svg">
-        <img src="../media/img/icons/Pc.svg">
-        <img src="../media/img/icons/Watch.svg">
-        <img src="../media/img/icons/Cam.svg">
-        <img src="../media/img/icons/Glasses.svg">
+        <img src="../media/img/icons/Phone.svg" alt="Phone Icon">
+        <img src="../media/img/icons/Ear.svg" alt="Earphone Icon">
+        <img src="../media/img/icons/Pc.svg" alt="Pc Icon">
+        <img src="../media/img/icons/Watch.svg" alt="Watch Icon">
+        <img src="../media/img/icons/Cam.svg" alt="Cam Icon">
+        <img src="../media/img/icons/Glasses.svg" alt="Glasses Icon">
     </div>
 
     <div class="device bgDG piccolo" id="glitched" style="display: none;">
