loading and two versions of video

--- a/liv/components/home/newscroll.html
+++ b/liv/components/home/newscroll.html
@@ -1,6 +1,6 @@
 <div id="background-container" class="background-container">
     <div id="video-container" class="video-container">
-        <video src="../media/video/output2.mp4" type="video/mp4" id="bgVideo" autoplay muted="muted" playsinline="" controlslist="nodownload"></video>
+        <video src="../media/video/output3.mp4" type="video/mp4" id="bgVideo" autoplay muted="muted" playsinline="" controlslist="nodownload"></video>
     </div>
 </div>
 
@@ -29,11 +29,11 @@
     </section>
 
     <section id="step6" class="step">
-        <div><h3>where your digital footprint – wherever you are</h3></div>
+        <div><h3></h3></div>
     </section>
 
     <section id="step7" class="step">
-        <div><h3></h3></div>
+        <div><h3>where your digital footprint – wherever you are</h3></div>
     </section>
 
     <section id="step8" class="step">
@@ -41,6 +41,10 @@
     </section>
 
     <section id="step9" class="step">
+        <div><h3></h3></div>
+    </section>
+
+    <section id="step10" class="step">
         <div><h3></h3></div>
     </section>
 <!-- 
