--- a/liv/components/home/lines.html
+++ b/liv/components/home/lines.html
@@ -1,6 +1,6 @@
-<div class="container">
+<h3 class="container">
 	in an ultra secure and untraceable manner
-</div>
+</h3>
 
 <div style="position: relative; height: 60vh;"></div>
 <div id="lineSection">
@@ -57,9 +57,9 @@
     <img id="brain" class="brain brainPiccolo" src="../media/img/icons/brain.svg">
 </div>
 
-<div class="container">
+<h3 class="container">
     where all your data is combined in one centralized neural network
-</div>
+</h3>
 
 <div style="height: 200vh; width: 100vw; position: relative; background-color: black;">
 
