--- a/liv/components/home/scanning.html
+++ b/liv/components/home/scanning.html
@@ -8,16 +8,16 @@
             </div>
     
             <div class="scrollVideoText scrollHead">
-                <h1 id="scrollHead">Analyzing the <span style="color: #ED1E40; font-size: 40px;">Electroencephalogram, eye-tracking, saliva, skin tone</span></h1>
+                <h1 id="scrollHead">Analyzing the<br><span style="color: #ED1E40;">Electroencephalogram, eye-tracking, saliva, skin tone</span></h1>
             </div>
             <div class="scrollVideoText scrollChest">
-                <h1 id="scrollChest">Analyzing the <span style="color: #ED1E40; font-size: 40px;">ECG</span></h1>
+                <h1 id="scrollChest">Analyzing the<br><span style="color: #ED1E40;">ECG</span></h1>
             </div>
             <div class="scrollVideoText scrollArms">
-                <h1 id="scrollArms">Analyzing the <span style="color: #ED1E40; font-size: 40px;">blood pressure, spo2, GSR, muscle tension</span></h1>
+                <h1 id="scrollArms">Analyzing the<br><span style="color: #ED1E40;">blood pressure, spo2, GSR, muscle tension</span></h1>
             </div>
             <div class="scrollVideoText scrollBust">
-                <h1 id="scrollBust">Analyzing the <span style="color: #ED1E40; font-size: 40px;"> EGG, gut health</span></h1>
+                <h1 id="scrollBust">Analyzing the<br><span style="color: #ED1E40;"> EGG, gut health</span></h1>
             </div>
         </div>
     
@@ -27,7 +27,7 @@
 
 </div>
 
-<div class="container"> Imagine the future of health </div>
+<h3 class="container"> Imagine the future of health </h3>
 
 <script>
 var videoScan = document.getElementById('videoScan');
