--- a/liv/components/home/closing.html
+++ b/liv/components/home/closing.html
@@ -1,5 +1,5 @@
-<div class="imagine">
-    <p style="width: 70vw;">
+<div class="closing">
+    <p>
         That gives birth to an omni-present A.I.
         that helps you navigate through your life
         by enabling you to understand how your lifestyle affects your health
@@ -7,17 +7,17 @@
         and which need to change – and how…
     </p>
 
-    <div style="width: 30vw;">
+    <div>
         <lottie-player src="https://lottie.host/2d43b5df-391b-41c0-b87b-c9ceb80431c3/SomFLu2iHC.json"  background="transparent"  speed="1"  style="width: 25vw; height: 25vw"  loop  autoplay></lottie-player>
     </div>
 </div>
 
-<div class="imagine">
-    <div style="width: 30vw;">
+<div class="closing">
+    <div>
         <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_kvw2mn6a.json"  background="transparent"  speed="0.5"  style="width: 25vw; height: 25vw"  loop  autoplay></lottie-player>
     </div>
     
-    <p style="width: 70vw;">
+    <p>
         used proactively for your personalized preventive health
         empowering you to make qualified informed decisions about your health every day
         
