--- a/liv/script/style-mobile.css
+++ b/liv/script/style-mobile.css
@@ -2,6 +2,10 @@
 
 /* ---------- BASIC HTML ---------- */
 
+h3{
+ font-size: 6vw;
+}
+
 .cookies-container{
     justify-content: flex-end;
     flex-direction: row;
@@ -45,19 +49,23 @@
 
 .imagine p{ font-size: 6vw; }
 
-.imagine{ height: auto; }
+.imagine{ height: auto;}
 
 /* ---------- VIDEO BACKGROUND ---------- */
 
 .background-container { width: 100vw; }
 
 .video-container{
-    height: 100vh;
+    /* height: 100vh;
     width: 100vw;
     min-width: 100vw;
     max-width: 100vw;
     min-height: 100vh;
-    max-height: 100vh;
+    max-height: 100vh; */
+
+    height: 50vh;
+    width: 100vw;
+    top: 25vh;
 }
 
 .video-container video{
@@ -133,6 +141,8 @@
 
 /* ---------- EVERYTHING ---------- */
 
+.no-mobile{ display: none; }
+
 /* .aaa{
     left: 4vw;
     top:20vh;
@@ -152,6 +162,17 @@
     transition: right 0.3s;
 } */
 
+.closing{
+    flex-direction: column;
+}
+.closing p{
+    width: 100vw;
+    font-size: 20px;
+}
+.closing div{
+    display: none;
+}
+
 /* ---------- ABOUT ME ---------- */
 
 .aboutme{
@@ -168,10 +189,19 @@
 
 /* ---------- FOOTER ---------- */
 
+.footer {
+    padding-top: 10vh;
+    padding-bottom: 6vh;
+}
+
 .foot ul li {
     font-size: 4.5vw;
 }
 
 .foot{ display: initial; }
+
+.social ul{
+    align-items: flex-start;
+}
 
 }
