--- a/liv/components/home/newscroll.html
+++ b/liv/components/home/newscroll.html
@@ -21,7 +21,9 @@
 
 <div id="scroll-container" class="scroll-container">
 
-    <section id="step0" class="step"></section>
+    <section id="step0" class="step">
+        <div><h3>Imagine the future of health</h3></div>
+    </section>
     
     <section id="step1" class="step">
         <div><h3>Where all your devices are connected</h3></div>
