just a class name

--- a/liv/components/home/lines.html
+++ b/liv/components/home/lines.html
@@ -1,4 +1,4 @@
-<h3 class="container">
+<h3 class="fadingTitle">
 	in an ultra secure and untraceable manner
 </h3>
 
@@ -57,7 +57,7 @@
     <img id="brain" class="brain brainPiccolo" src="../media/img/icons/brain.svg">
 </div>
 
-<h3 class="container">
+<h3 class="fadingTitle">
     where all your data is combined in one centralized neural network
 </h3>
 
@@ -203,7 +203,7 @@ window.addEventListener("scroll", line);
 
 <script>
 
-    var targets = document.querySelectorAll(".container");
+    var targets = document.querySelectorAll(".fadingTitle");
     
     targets.forEach(target => {
     const tl = gsap.timeline({
