--- a/liv/script/style-mobile.css
+++ b/liv/script/style-mobile.css
@@ -76,7 +76,7 @@ h3{
 
 .step>div { font-size:6vw !important; }
 
-.container { 
+.fadingTitle { 
     width: 100vw;
     font-size:6vw !important; 
 }
